RemoveAISearchable , introduce governance module (#120)